src/test/ui/blind-item-item-shadow.stderr
error[E0255]: the name `foo` is defined multiple times
  --> $DIR/blind-item-item-shadow.rs:13:5
   |
11 | mod foo { pub mod foo {  } }
   | ------- previous definition of the module `foo` here
12 | 
13 | use foo::foo;
   |     ^^^^^^^^ `foo` reimported here
   |
   = note: `foo` must be defined only once in the type namespace of this module
help: You can use `as` to change the binding name of the import
   |
13 | use foo::foo as Otherfoo;
   |     ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

